Removing reliance on C5 collection in RouteHandler so we can remove reference to Mono.C5 dll, which might be a pain to use on the MS .NET framework (if you have to use the C5 collection download with a different DLL name)

--- a/src/Manos/Manos.csproj
+++ b/src/Manos/Manos.csproj
@@ -36,8 +36,10 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
+    <Reference Include="System">
+    </Reference>
+    <Reference Include="System.Core">
+    </Reference>
     <Reference Include="Mono.Posix" />
     <Reference Include="Mono.CSharp" />
     <Reference Include="Mono.C5" />
